--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/assets/css/output.css" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi suscipit
+      placeat, molestias ut inventore vitae quam adipisci. Tenetur, delectus quo
+      harum ad voluptates voluptate nemo eius dicta temporibus, ipsum nisi?
+    </p>
+  </body>
 </html>
